--- a/cawproject/package.json
+++ b/cawproject/package.json
@@ -1,7 +1,6 @@
 {
     "dependencies": {
-        "@project-serum/anchor": "^0.18.0",
-        "@project-serum/anchor-cli": "^0.18.2"
+        "@project-serum/anchor": "^0.18.0"
     },
     "devDependencies": {
         "chai": "^4.3.4",
